--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <i class="fab fa-facebook-f"></i></a>
         </li>
         <li>
-          <a href="https://www.linkedin.com/contatc2013" target="_blank">
+          <a href="https://www.linkedin.com/in/contatc2013" target="_blank">
             <i class="fab fa-linkedin-in"></i></a>
         </li>
           <li>
